--- a/partials/api/logger.BarneyLogger.html
+++ b/partials/api/logger.BarneyLogger.html
@@ -76,7 +76,7 @@ the configuration in ALL your site </em></strong></p>
 </div> <p><em>(default: true)</em></p></td></tr><tr><td>level</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="logger-barneylogger-init-page"><p>Actives all levels following the given</p>
 </div> <p><em>(default: 'log')</em></p></td></tr><tr><td>levels</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="logger-barneylogger-init-page"><p>Levels contains the manual configuration of the Logger.</p>
 </div> <p><em>(default: undefined)</em></p></td></tr><tr><td>emit</td><td><a href="" class="label type-hint type-hint-function">function</a></td><td><div class="logger-barneylogger-init-page"><p>Emit is an addictional parameter that allows you to use a custom function as an emitter.</p>
-</div> <p><em>(default: Logger.emit())</em></p></td></tr></tbody></table></td></tr></tbody></table><h4 id="methods_init_example">Example</h4>
+</div> <p><em>(default: Uses window.console)</em></p></td></tr></tbody></table></td></tr></tbody></table><h4 id="methods_init_example">Example</h4>
 <div class="example"><div class="logger-barneylogger-init-page"><h5 id="methods_init_example_logger-init">Logger Init</h5>
 <p>Here are some examples of the init method.</p>
 <p><strong>Default initialization</strong>
